[gd_scene load_steps=7 format=3 uid="uid://0p6ojxpoe48k"]

[ext_resource type="FontFile" uid="uid://di5xep1kns22p" path="res://fonts/droid-sans/DroidSans-Bold.ttf" id="1"]
[ext_resource type="Script" path="res://scripts/EndScene.gd" id="2"]
[ext_resource type="Theme" uid="uid://bfooh2sk4dse4" path="res://Main.theme" id="3"]
[ext_resource type="FontFile" uid="uid://78i8i7i2md5e" path="res://fonts/droid-sans/DroidSans.ttf" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.5199
offset_right = -2.5199
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "Test zaliczony/niezaliczony"
clip_text = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "Twój wynik to:"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "X/XX"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
theme_override_constants/separation = 100

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource("3")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Button"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = SubResource("2")
text = "Wyjdź"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
theme = ExtResource("3")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Button2"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = SubResource("2")
text = "Sprawdź odpowiedzi"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
